# medaka

./: .clignore  .gitignore  .mcp.json  AGENTS.md  ASYNC-DESIGN.md  AT-IMPL-PORT-DESIGN.md  BROWSER-STACK-DIAGNOSIS.md  CANARY.md  CAPABILITY-EFFECTS-RESEARCH.md  CAPABILITY-EFFECTS-V2-DESIGN.md  CAPABILITY-EFFECTS.md  CAPABILITY-PLATFORM.md  D2-REKEY-DESIGN.md  DICT-CONFORMANCE-AUDIT.md  DICT-CONFORMANCE-ROADMAP.md  DICT-SEMANTICS.md  DISTRIBUTION-DESIGN.md  EFFECTS-CONFORMANCE-AUDIT.md  EFFECTS-CONFORMANCE-ROADMAP.md  EFFECTS-SEMANTICS.md  F1B-MODULE-IDENTITY-DESIGN.md  FP-STDLIB-DESIGN.md  GAP3-SLICE7-DESIGN.md  HANDOFF.md  INDEX-16-PLAN.md  INDEX-DESIGN.md  INTERFACE-CANDIDATES.md  LANGUAGE-SURFACE-AUDIT.md  LAYOUT-BRACKETS-DESIGN.md  LAYOUT-CONFORMANCE-AUDIT.md  LAYOUT-CONFORMANCE-ROADMAP.md  LAYOUT-SEMANTICS.md  LIB-REMOVAL-DESIGN.md  LICENSE  MAP-SET-AMBIGUITY-DESIGN.md  MUT-SCOPING-DESIGN.md  Makefile  NET-DESIGN.md  NUMLIT-DESIGN.md  P1-STDLIB-DESIGN.md  (+19 more)
.claude/: HANDOFF.md  ORCHESTRATING.md  settings.json
.githooks/: pre-commit
archive/: DICT-CONFORMANCE-AUDIT.md  DICT-CONFORMANCE-ROADMAP.md  EFFECTS-CONFORMANCE-AUDIT.md  LAYOUT-CONFORMANCE-AUDIT.md  LAYOUT-CONFORMANCE-ROADMAP.md  README.md
byteparser/: main.mdk  medaka.toml
compiler/: AGENTS.md  ARCH-REVIEW.md  ARGSTAMP-UNIFY-PLAN.md  BOOTSTRAP.md  COMPOSITE-MAIN-AUTOPRINT-DESIGN.md  CONSTRUCT-COVERAGE.md  DIAGNOSTIC-CODES-DESIGN.md  DIAGNOSTICS-SURFACING-PLAN.md  DISPATCH-GAPS-SCOPE.md  DISPATCH-INVENTORY.md  DRIVER-COLLAPSE-PLAN.md  EAGER-INIT-DESIGN.md  EMITTER-GAPS.md  EQ-DISPATCH-DESIGN.md  ERROR-QUALITY.md  FMT-COMMENT-INTERLEAVING-DESIGN.md  HELPER-CENSUS.md  MESSAGE-AUDIT.md  MULTICLAUSE-EXHAUST-DESIGN.md  PARSE-ERROR-LOCATION-DESIGN.md  PERF-CI-COVERAGE.md  PERF-NOTES.md  PERF-RESULTS.md  PERF-RUNTIME.md  PERF-SCOPE.md  PRE-FLIP-GAPS.md  PRELUDE-OBJ-DESIGN.md  README.md  REFERENCES-RENAME-DESIGN.md  REROOT-PLAN.md  RESOLVER-DIAG-LOCATION-DESIGN.md  RUNTIME-DESIGN.md  RUNTIME-DIAGNOSTIC-CHANNEL-DESIGN.md  RUNTIME-TRAP-UNIFY-DESIGN.md  S1-CONSTRAINED-SHADOW-DESIGN.md  SHADOW-INVERSION-DESIGN.md  SHARED-FLOAT-RESIDUAL-DESIGN.md  SOURCE-POSITION-DESIGN.md  STAGE2-DESIGN.md  TRMC-DESIGN.md  (+18 more)
demo/: plugin_good.mdk  plugin_malicious.mdk
dev/: astdump.ml  comment_dump.ml  debug.ml  diagdump.ml  dune  eval_probe.ml  fmt_dump.ml  fuzz_gen.ml  gen_golden.ml  lextok.ml  module_debug.ml  positions_dump.ml  print_probe.ml  tc_debug.ml  tc_module_probe.ml  tc_probe.ml
docker/: Dockerfile  README.md
docs/: README.md
editors/: install-vscode.sh
lib/: ast.ml  build_cmd.ml  builtins.ml  coverage.ml  desugar.ml  diagnostics.ml  dict_pass.ml  doc.ml  doctest.ml  dune  elaborate.ml  eval.ml  exhaust.ml  fmt.ml  lexer.mll  loader.ml  lsp_log.ml  lsp_server.ml  method_marker.ml  new_cmd.ml  parser.conflicts  parser.mly  parser_state.ml  prelude.ml  printer.ml  project_config.ml  prop_runner.ml  repl.ml  resolve.ml  runtime.ml  test_cmd.ml  typecheck.ml
mq/: NOTES.md  README.md  SPEC.md  main.mdk  medaka.toml
ops/: README.md  cloud-init.yaml  provision.sh  snipe_hetzner.py
parsec/: main.mdk  medaka.toml  toml_demo.mdk
playground/: .gitignore  README.md  build_assembler.sh  build_compiler_wasm.sh  build_editor.sh  build_playground_wasm.sh  build_site.sh  client_flow_test.mjs  compile.mjs  compiler-worker.js  dev_compile_node.mjs  diagnostics_map.js  editor.js  index.html  language-worker.js  main.js  medaka_lang.js  medaka_tokenizer.js  roundtrip_test.mjs  server.js  squiggle_test.mjs  tokenizer_test.mjs  worker.js
playground/wat2wasm/: .gitignore  Cargo.toml  test_harness.mjs
playground/wat2wasm/src/: lib.rs
qa-beta-2026-07-07/: FINDINGS.md  FIXTURES.md  P0-18-STANDALONE-DISPATCH-DESIGN.md  P0-5-MUTABILITY-DESIGN.md
runtime/: README.md  medaka_rt.c
scripts/: docker-dev.sh  medaka-mcp-wrapper.sh
selfhost/: ARCH-REVIEW.md  ARGSTAMP-UNIFY-PLAN.md  BOOTSTRAP.md  CONSTRUCT-COVERAGE.md  DIAGNOSTICS-SURFACING-PLAN.md  DISPATCH-GAPS-SCOPE.md  DISPATCH-INVENTORY.md  DRIVER-COLLAPSE-PLAN.md  EMITTER-GAPS.md  HELPER-CENSUS.md  PERF-NOTES.md  PERF-RESULTS.md  PERF-RUNTIME.md  PERF-SCOPE.md  PRE-FLIP-GAPS.md  README.md  REROOT-PLAN.md  RUNTIME-DESIGN.md  STAGE2-DESIGN.md  TRMC-DESIGN.md  TYPECHECK-AUDIT.md  WASM-SELFHOST-GAPS.md  WASM-SELFHOST-ROADMAP.md  WASMGC-DESIGN.md  WASMGC-TRMC-DESIGN.md  WS2-REKEY-DIAGNOSIS.md  all_modules_entry.mdk  annotate.mdk  ast.mdk  bprime-llvm-wip.patch  build_cmd.mdk  build_main.mdk  bytecode.mdk  check.mdk  check_all_main.mdk  check_batch.mdk  check_main.mdk  check_match_main.mdk  check_modules_main.mdk  core_ir.mdk  (+94 more)
sqlite/: .gitignore  aggregate_demo.mdk  delete_demo.mdk  demo_support.mdk  distinct_demo.mdk  dml_probe.mdk  file_roundtrip_probe.mdk  groupby_demo.mdk  index_fill_demo.mdk  index_types_demo.mdk  index_write_demo.mdk  inmem_aggregate_probe.mdk  inmem_arith_probe.mdk  inmem_crud_probe.mdk  inmem_distinct_probe.mdk  inmem_groupby_probe.mdk  inmem_join_probe.mdk  inmem_leftjoin_probe.mdk  inmem_orderby_probe.mdk  inmem_proj_probe.mdk  inmem_sqlparse_probe.mdk  inmem_tablecase_probe.mdk  join_demo.mdk  left_join_demo.mdk  main.mdk  medaka.toml  multipage_write_demo.mdk  multitable_write_demo.mdk  overflow_demo.mdk  projection_demo.mdk  query_demo.mdk  render_demo.mdk  rowid_roundtrip_demo.mdk  select_demo.mdk  sql_demo.mdk  sql_probe.mdk  sqlparse_probe.mdk  subquery_demo.mdk  update_demo.mdk  update_expr_demo.mdk  (+2 more)
stdlib/: README.md  array.desugar.golden  array.lextok.golden  array.mark.golden  array.mdk  async.desugar.golden  async.mark.golden  async.mdk  async.test.golden  base64.desugar.golden  base64.mark.golden  base64.mdk  bits64.mdk  bytebuilder.desugar.golden  bytebuilder.mdk  bytebuilder.test.golden  byteparser.desugar.golden  (+89 more)
test/thorough/: dune  thorough_diff.ml  thorough_eval.ml  thorough_helpers.ml  thorough_interactions.ml  thorough_recent.ml  thorough_stdlib.ml  thorough_typecheck.ml
(+4235 files in other folders)
