(rule
 (target stdlib_content.ml)
 (deps ../stdlib/runtime.mdk)
 (action
  (with-stdout-to %{target}
   (run ../gen/embed.exe runtime_mdk ../stdlib/runtime.mdk))))

(rule
 (target prelude_content.ml)
 (deps ../stdlib/core.mdk)
 (action
  (with-stdout-to %{target}
   (run ../gen/embed.exe core_mdk ../stdlib/core.mdk))))

(library
 (name medaka_lib)
 (modules ast builtins desugar diagnostics eval exhaust fmt lexer loader
          lsp_server parser parser_state printer prelude prelude_content
          resolve repl runtime stdlib_content typecheck)
 (libraries menhirLib lsp jsonrpc))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --explain))
