(rule
 (target stdlib_content.ml)
 (deps ../stdlib/runtime.mdk)
 (action
  (with-stdout-to %{target}
   (run ../gen/embed.exe runtime_mdk ../stdlib/runtime.mdk))))

(rule
 (target prelude_content.ml)
 (deps ../stdlib/core.mdk)
 (action
  (with-stdout-to %{target}
   (run ../gen/embed.exe core_mdk ../stdlib/core.mdk))))

(library
 (name medaka_lib)
 (modules ast bench_runner builtins coverage desugar diagnostics dict_pass doctest eval exhaust fmt lexer loader
          lsp_log lsp_server method_marker new_cmd parser parser_state printer prelude prelude_content
          project_config prop_runner resolve repl runtime stdlib_content test_cmd typecheck)
 (libraries menhirLib lsp jsonrpc unix uucp))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --explain))
